@@ -1,11 +1,11 @@
 Package: seqdist2
-Version: 0.9-1
-Date: 2016-10-06
+Version: 0.9-2
+Date: 2016-12-01
 Title: Distance Between State Sequences
 Author: Matthias Studer <matthias.studer@unige.ch>, Gilbert Ritschard <gilbert.ritschard@unige.ch>
 Maintainer: Matthias Studer <matthias.studer@unige.ch>
 Depends: TraMineR
-Imports: cluster
+Imports: cluster, stats
 Description: Collection of dissimilarity measures between state sequences and methods of determining substitution and indel costs for optimal-matching-based dissimilarities. The main function is seqdistOO.
 License: GPL (>= 2)
 URL: http://mephisto.unige.ch/traminer
