@@ -1,5 +1,5 @@
 import("TraMineR")
-importFrom(cluster, daisy)
+importFrom("cluster", "daisy")
 importFrom("stats", "xtabs")
 export(
     seqdistOO,
