@@ -1,6 +1,13 @@
-              CHANGES IN seqdist2 VERSION 0.9-1 [2016-10-20]
+              CHANGES IN seqdist2 VERSION 0.9-2 [2016-12-01]
 
-  o Fixed typos in and updated references help pages. 
+BUG FIXES
+  o seqdistOO: A badly specified test hindered the use of
+        methods CHI2 and EUCLID. Fixed
+  o seqcost: When one of the methods "INDELS", "INDELSLOG", or
+        "FEATURES" was used with with.missing=TRUE, bad messages
+        regarding substitution costs for missing were displayed.    
+MISC  
+  o Fixed typos in and updated references help pages.
 
               CHANGES IN seqdist2 VERSION 0.9-1 [2015-11-16]
 
